UI: Fixing alignment and general design (#17)
* changed line width

* fixed button alignment for all screens

* centered icons

--- a/src/styles/initial/DataCollection.css
+++ b/src/styles/initial/DataCollection.css
@@ -4,39 +4,46 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-top: 55px;
 }
 
 .title {
     font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-weight: bold;
-    margin-left: 32px;
+    margin-left: 25px;
     color: white;
 }
 
 .input { 
+    background-color: rgba(255,255,255, 0.2);
+    color: white;
+    font-weight: 600;
     border-radius: 5px;
     border: none;
     height: 25px;
+    padding: 0px 5px;
 }
 
 .inputs {
     display: flex;
     flex-direction: column;
-    padding-left: 32px;
-    padding-right: 32px;
-    margin-top: 22px;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-top: 40px;
 }
 
 .inputLabel {
     font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 700;
     color: white;
     margin-top: 24px;
     margin-bottom: 5px;
 }
 
-.buttonContainer {
-    margin-top: 22px;
-    padding-left: 32px;
-    padding-top: 30px;
+.nextContainer {
+    margin-top: 40px;
+    padding-left: 25px;
+    padding-top: 40px;
 }
